[package]
name = "telewol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wake-on-lan = "0.2.0"
teloxide = { version = "0.11", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.22", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.148", features = ["derive"] }
toml = "0.5.9"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
